nav section and home section

--- a/index.html
+++ b/index.html
@@ -2,26 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <title>Mi Portafolio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li> <a href="#home">HOME</a></li>
-                <li> <a href="#aboutme">ABOUT ME</a></li>
-                <li> <a href="#skills">SKILLS</a></li>
-                <li> <a href="#projects">PROJECTS</a></li>
-                <li> <a href="#contact">CONTACT</a></li>
-            </ul>
-        </nav>
-        <div class="nav-responsive">
-            <i class="fa-solid fa-bars"></i>
+    <!-- NAV SECTION-->
+    <div class="contenedor-header">
+        <header>
+            <div class="logo">
+                <a href="#" alt="Barbieri Joaquín Logo">Barbieri Joaquín</a>
+            </div>
+            <nav id="nav">
+                <ul>
+                    <li> <a href="#home">HOME</a></li>
+                    <li> <a href="#aboutme">ABOUT ME</a></li>
+                    <li> <a href="#skills">SKILLS</a></li>
+                    <li> <a href="#projects">PROJECTS</a></li>
+                    <li> <a href="#contact">CONTACT</a></li>
+                </ul>
+            </nav>
+            <div class="nav-responsive">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </header>
+    </div>
+
+    <!-- HOME SECTION-->
+     <section id="home" class="home">
+        <div class="contenido-banner">
+            <div class="contenedor-img">
+                <img src="img/png-portfolio.jpeg" alt="">
+            </div>
+            <h1>BARBIERI JOAQUÍN</h1>
+            <h2>Software Engineer</h2>
+            <div class="redes">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
         </div>
-            
-    </header>
-    
+     </section>
+    <script src="script.js"></script>
 </body>
 </html>
