about me section, skills section, projects section, contact section and footer

--- a/index.html
+++ b/index.html
@@ -36,14 +36,335 @@
             <div class="contenedor-img">
                 <img src="img/png-portfolio.jpeg" alt="">
             </div>
-            <h1>BARBIERI JOAQUÍN</h1>
-            <h2>Software Engineer</h2>
+            <h1>BARBIERI WALTER JOAQUÍN</h1>
+            <h2>System Engineer</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
      </section>
+
+     <!--ABOUT ME SECTION-->
+     <section id="aboutme" class="aboutme">
+        <div class="contenido-section">
+            <h2>About Me</h2>
+            <p><span>Hello! I'm Joaquín Barbieri.</span> a Systems Engineer with a passion
+                 for front-end development. I love taking on new challenges that
+                  allow me to grow and push my skills further.
+            </p>
+        </div>
+        <div class="fila">
+            <!--datos personales-->
+            <div class="col">
+                <h3>Personal Data</h3>
+                <ul>
+                    <li>
+                        <strong>Full Name</strong>
+                        Barbieri, Walter Joaquín
+                    </li>
+                    <li>
+                        <strong>Date of Birth</strong>
+                        7 March, 2000
+                    </li>
+                    <li>
+                        <strong>Location</strong>
+                        Tandil (Buenos Aires, Argentina)
+                    </li>
+                    <li>
+                        <strong>Email</strong>
+                        barbierijoaco@gmail.com
+                    </li>
+                    <li>
+                        <strong>Phone Number</strong>
+                        +54 9 2494-339904
+                    </li>
+                </ul>
+            </div>
+            <!--intereses-->
+            <div class="col">
+                <h3>Interest</h3>
+                <div class="contenedor-interest">
+                    <div class="interest">
+                        <i class="fa-solid fa-music"></i>
+                        <span>Music</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-futbol"></i>
+                        <span>Football</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-dumbbell"></i>
+                        <span>Sports</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-person-walking"></i>
+                        <span>Walking</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-book"></i>
+                        <span>Reading</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-plane"></i>
+                        <span>Traveling</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-mug-hot"></i>
+                        <span>Coffee</span>
+                    </div>
+                    <div class="interest">
+                        <i class="fa-solid fa-dog"></i>
+                        <span>Dogs</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button>
+            Descargar CV <i class="fa-solid fa-download"></i>
+            <span class="overlay"></span>
+        </button>
+     </section>
+
+     <!--SKILLS SECTION-->
+     <section id="skills" class="skills">
+        <div class="contenido-section">
+            <h2>SKILLS</h2>
+            <div class="fila">
+                <!--Technical Skill-->
+                <div class="col">
+                    <h3>Technical Skills</h3>
+                    <div class="skill">
+                        <span>Java</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>PostgreSQL & MySQL</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>67%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Javascript</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>60%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>HTML & CSS</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>React</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>60%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Git</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Professional Skill-->
+                <div class="col">
+                    <h3>Professional Skills</h3>
+                    <div class="skill">
+                        <span>Communication</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Self-learning</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Adaptability</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Persistence</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Problem-solving</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Teamwork</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Leadership</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>84%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Creativity</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>90%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Empathy</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
+     <!--PROJECTS SECTION-->
+     <section id="projects" class="projects">
+        <div class="contenido-section">
+            <h2>PROJECTS</h2>
+            <div class="galeria">
+                <div class="project">
+                    <img src="img/i3.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE1</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/i3.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE2</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/i3.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE3</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/i5.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE4</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/i5.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE5</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/i5.jpg" alt="">
+                    <div class="overlay">
+                        <h3>NOMBRE5</h3>
+                        <p>PHOTO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+     
+     <!--CONTACT SECTION-->
+     <section class="contact" id="contact">
+        <div class="contenido-section">
+            <h2>CONTACT</h2>
+            <duv class="fila">
+                <!--Formulario-->
+                <div class="col">
+                    <input type="text" placeholder="Your Name">
+                    <input type="text" placeholder="Phone">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Subject"> 
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button>
+                        Send Message <i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </div>
+                <!--Mapa-->
+                <div class="col">
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                Tandil (Bs As, Argentina)
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-mobile-screen-button"></i>
+                                +54 9 2494-339904
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                barbierijoaco@gmail.com 
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </duv>
+        </div>
+     </section>
+
+     <!--FOOTER-->
+    <footer>
+       <a href="#home" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+       </a>
+       <div class="redes">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
+     
     <script src="script.js"></script>
 </body>
 </html>
