--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li> <a href="#home">HOME</a></li>
-                    <li> <a href="#aboutme">ABOUT ME</a></li>
-                    <li> <a href="#skills">SKILLS</a></li>
-                    <li> <a href="#projects">PROJECTS</a></li>
-                    <li> <a href="#contact">CONTACT</a></li>
+                    <li> <a href="#home" onclick="seleccionar()">HOME</a></li>
+                    <li> <a href="#aboutme" onclick="seleccionar()">ABOUT ME</a></li>
+                    <li> <a href="#skills" onclick="seleccionar()">SKILLS</a></li>
+                    <li> <a href="#projects" onclick="seleccionar()">PROJECTS</a></li>
+                    <li> <a href="#contact" onclick="seleccionar()">CONTACT</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
@@ -39,8 +39,8 @@
             <h1>BARBIERI WALTER JOAQUÍN</h1>
             <h2>System Engineer</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/barbierijoaco/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/barbierijoaquin" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
      </section>
@@ -318,7 +318,7 @@
      <section class="contact" id="contact">
         <div class="contenido-section">
             <h2>CONTACT</h2>
-            <duv class="fila">
+            <div class="fila">
                 <!--Formulario-->
                 <div class="col">
                     <input type="text" placeholder="Your Name">
@@ -350,7 +350,7 @@
                         </ul>
                     </div>
                 </div>
-            </duv>
+            </div>
         </div>
      </section>
 
@@ -360,8 +360,8 @@
             <i class="fa-solid fa-angles-up"></i>
        </a>
        <div class="redes">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/barbierijoaco/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/barbierijoaquin" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
      
